...



@Composable
fun CrearAlbumScreen(navController: NavController) {
    var expanded by remember { mutableStateOf(false) }
    val opcionesRecordLabel = listOf("Sony Music", "EMI", "Discos Fuentes", "Elektra", "Fania Records")
    var expandedGen by remember { mutableStateOf(false) }
    val opcionesGen = listOf("Classical", "Salsa", "Rock", "Folk")
    var nombreError by remember { mutableStateOf(false) }
    var nombreObligatorioError by remember { mutableStateOf(false) }
    var descripcionError by remember { mutableStateOf(false) }
    var descripcionObligatoriaError by remember { mutableStateOf(false) }
    var URLObligatoriaError by remember { mutableStateOf(false) }
    var URLError by remember { mutableStateOf(false) }
...
                        onValueChange = {},
                        readOnly = true,
                        label = { Text(stringResource(R.string.genero)) },
                        trailingIcon = {
                            IconButton(
                                onClick = { expandedGen = !expandedGen },
                                modifier = Modifier.testTag("openDropdowGen")) {
                                Icon(
                                    imageVector = if (expandedGen) Icons.Default.ArrowDropUp else Icons.Default.ArrowDropDown,
                                    contentDescription = stringResource(R.string.abrir_menu)
                                )
                            }
                        },
...
                        onValueChange = {},
                        readOnly = true,
                        label = { Text(stringResource(R.string.sello_discografico)) },
                        trailingIcon = {
                            IconButton(
                                onClick = { expanded = !expanded },
                                modifier = Modifier.testTag("openDropdowRecor")) {
                                Icon(
                                    imageVector = if (expanded) Icons.Default.ArrowDropUp else Icons.Default.ArrowDropDown,
                                    contentDescription = stringResource(R.string.abrir_menu)
                                )
                            }
                        },
...
                            }
                        )
                    },
                    colors = ButtonDefaults.buttonColors(containerColor = Color(0xFFFF6B6B)),
                    modifier = Modifier
                    .fillMaxWidth()
                    .testTag("botonCrearAlbum")
                    .semantics { contentDescription = createAlbum }
                ) {
                    Text(stringResource(R.string.crear_album), color = Color.White)
                }

                Spacer(modifier = Modifier.height(16.dp))
...
