...
}

@Composable

fun AlbumCarousel(navController: NavController){
    SectionTitle(
        title = "Albumes",
        onAddClick = {
            navController.navigate("listar_albumns")
        },
        description = "addAlbumButton"
    )
    Spacer(modifier = Modifier.height(6.dp))
...
