...

            Text(text = "$currentPage", color = Color.White)

            IconButton(
                onClick = { viewModel.nextPage() },
                enabled = isNextEnabled,
                modifier = Modifier.testTag("boton_siguiente")
            ) {
                Icon(
                    imageVector = Icons.Filled.ArrowForward,
                    contentDescription = "Siguiente página",
                    tint = Color.White
                )
...
